--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
 </head>
  
 <body>
+<!--##############################  MARX ######################################################-->
+<!--contenedor que ves cuando entras a la pag web-->
+
+    <header class="hero">
+        <ul class="menu">
+            <li class="menu_option"><a href="#Whatis" class="active">¿Qué somos?</a></li>
+             <li class="menu_option"><a href="#Servicios" class="active">Servicios</a></li>
+             <li class="menu_option"><a href="#Descargar" class="active">Descargar</a></li>
+             <li class="menu_option"><a href="#QuienesSomos" class="active">Nuestro equipo</a></li>
+             <li class="menu_option"><a href="#Contáctanos" class="active">Contáctanos</a></li>
+        </ul>
+        <div class="hero_container container">
+            <div class="hero_text">
+                <h1 class="hero_text_title>">Viaja con de manera segura dentro y fuera de tu ciudad con nosotros!</h1>
+                <p class="hero_text_paragraph">Nuestras tarifas son las más accesibles para que puedas movilizarte cuando quieras</p>
+                <a href="#" class="hero_link">Comienza a viajar</a>
+            </div>
+
+            <img src="taxi_prueba.svg" class="hero_img">
+        </div>
+    </header>
+
+<!--Contenido de la pag-->
+<!--##############################  MARX ######################################################-->
 
 </body>
 </html>
