Añadiendo Services Card

--- a/index.html
+++ b/index.html
@@ -34,5 +34,30 @@
 <!--Contenido de la pag-->
 <!--##############################  MARX ######################################################-->
 
+<!--##############################  JTUPC   ######################################################-->
+        <section class="services_card" id="Servicios">
+            <h2 class="services_title">Nuestros servicios</h2>
+
+            <section class="InsideCity">
+                <img src="Imagenes/insideCity.svg" class ="insideCity_picture" width="30%">
+                <h3 class="services_paragraph1">Dentro de la ciudad ...</h3>
+                <p class="services_paragraph1">
+                 Cuando quieras ir de un lugar a otro dentro de tu ciudad, te ofrecemos la opción que lo hagas con otras personas que vayan en tu misma ruta! Todo esto es posible gracias a que nuestros vehículos están adaptados para que entren más personas de las que entrarían en un vehículo de taxi normal, además de que te ahorrarás dinero y tendrás la misma comodidad de viajar en un taxi.
+                </p>
+
+            </section>
+            <br> <br> <br> <br>
+            <section class="OutsideCity">
+                <img src="Imagenes/outsideCity2.svg" class ="outsideCity_picture" width="30%">
+                <h3 class="services_paragraph2">Fuera de la ciudad ...</h3>
+                <p class="services_paragraph2">
+                    ¿Planeas salir de tu ciudad unos días sin gastar mucho dinero? Pues nuestra opción de crear rutas fuera de la ciudad y compartirlos con más usuarios es para ti. Nuestra plataforma fue pensada también para personas que deseen contratar un vehículo que los lleve a las afueras de la ciudad sin pagar mucho dinero, y esto es debido a que también será una opción de viaje compartido y de esta manera no tendrás que ir en un bus con demasiada gente, ni en un carro particular que probablemente te cobrará un precio muy elevado.
+                </p>
+                
+            </section>
+            
+
+        </section>
+<!--##############################  JTUPC ######################################################-->
 </body>
 </html>
