--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
            <div class="col-md-6 my-auto">
                 <h1 class="fw-bold" style="font-size: 45px; padding-bottom: 20x;">Viaja de manera segura dentro y fuera de tu ciudad!</h1>
                 <p class="fw-normal fs-5" style=" padding: 20px;">Nuestras tarifas son las más accesibles para que puedas movilizarte cuando quieras</p>
-                <button class="btn btn-success">Comienza a viajar</button>
+                <a href="https://betrip-44d5f.web.app/" target="_blank"><button class="btn btn-success">Comienza a viajar</button></button></a>
            </div>
            <div class="col-md-6">
                <img class="img-fluid" style="max-width:100%;" src="Assets/BeTripHeroe.png">
