--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bd-navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="Assets/BeTripLogo.svg" alt="" width="90" height="45"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
