--- a/index.html
+++ b/index.html
@@ -12,33 +12,33 @@
 
 </head>
 
-<header>
-    <nav class="navbar navbar-expand-lg navbar-dark bd-navbar">
+<header style="background-color: #47557e;">
+    <nav class="navbar navbar-expand-lg navbar-dark bd-navbar container">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img src="Assets/BeTripLogo.svg" alt="" width="90" height="45"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+            <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">What is beTrip?</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link active" href="#">Link</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link active" href="#">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Download</a>
+                <a class="nav-link active" href="#">Download</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Our team</a>
+                <a class="nav-link active" href="#">Our team</a>
               </li>
              
               <li class="nav-item">
-                <a class="nav-link disabled">Contact us</a>
+                <a class="nav-link active">Contact us</a>
               </li>
             </ul>
           </div>
