--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
        <div class="container-fluid" style="text-align: center;">
         <video controls width="375" height="250">
-            <source src="Assets/About the team OS.mp4" type="video/mp4">
+            <source src="Assets/About_the_team_OS.mp4" type="video/mp4">
         </video>
     </div>
 
