--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
                     "We are an application that offers the collective taxi service through a modern platform in which you can navigate and choose your routes to travel quickly, comfortably and, above all, economically."
                 </p>
            </div>
+           <div style="padding:100px ;">
+            <video controls width="370" height="250">
+              <source src="Assets/WhatIsVideo.mp4" type="video/mp4">
+             </video>
+           </div>
+           
+
        </div>
 
        <!--Our Services-->
@@ -187,8 +194,8 @@
        </div>
 
 
-       <div class="container-fluid" style="text-align: center;">
-        <video controls width="375" height="250">
+       <div class="container-fluid" style="text-align: center;padding: 100px;">
+        <video controls width="370" height="250">
             <source src="Assets/About_the_team_OS.mp4" type="video/mp4">
         </video>
     </div>
