--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
            <div class="col-md-6 my-auto">
                 <h1 class="fw-bold" style="font-size: 45px; padding-bottom: 20x;">Travel safely in and out of your city!</h1>
                 <p class="fw-normal fs-5" style=" padding: 20px;">Our rates are the most accessible so that you can mobilize whenever you want</p>
-                <a href="https://betrip-44d5f.web.app/" target="_blank"><button class="btn btn-success">Start travelling</button></button></a>
+                <a href="https://betrip-44d5f.firebaseapp.com/login" target="_blank"><button class="btn btn-success">Start travelling</button></button></a>
            </div>
            <div class="col-md-6">
                <img class="img-fluid" style="max-width:100%;" src="Assets/BeTripHeroe.png">
